--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -80,7 +80,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_schedulemain"
+        android:background="@color/blueDark_main"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
@@ -89,8 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add2"
-        app:backgroundTint="@android:color/black" />
+        android:src="@drawable/ic_add_white" />
 
 </android.support.design.widget.CoordinatorLayout>
 
