--- a/app/src/main/res/layout/activity_home_work.xml
+++ b/app/src/main/res/layout/activity_home_work.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeApp1.PopupOverlay" />
+            app:popupTheme="@style/ThemeApp1.PopupOverlay"
+            app:title="Домашнее задание" />
 
     </android.support.design.widget.AppBarLayout>
 
