--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginRight="5dp"
-        android:background="@color/white"
+        android:background="@color/BlueDark2"
         android:elevation="10dp"
         android:outlineProvider="bounds"
         android:padding="10dp"
@@ -30,8 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_marginRight="10dp"
-            android:src="@drawable/ic_delete"
-            app:backgroundTint="@android:color/white"
+            android:src="@drawable/ic_deletewhite"
+            app:backgroundTint="@color/text_blueDark"
             app:fabSize="mini" />
 
 
@@ -50,7 +50,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="@font/rus2"
                 android:text="object"
-                android:textColor="@color/color_schedule"
+                android:textColor="@color/white"
                 android:textSize="23dp"
                 android:textStyle="bold" />
 
@@ -61,7 +61,7 @@
                 android:fontFamily="@font/rus2"
                 android:padding="5dp"
                 android:text="room"
-                android:textColor="@color/black"
+                android:textColor="@color/text_blueDark"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -72,7 +72,7 @@
                 android:fontFamily="@font/rus2"
                 android:padding="5dp"
                 android:text="time_start"
-                android:textColor="@color/black"
+                android:textColor="@color/text_blueDark"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -83,7 +83,7 @@
                 android:fontFamily="@font/rus2"
                 android:padding="5dp"
                 android:text="time_end"
-                android:textColor="@color/black"
+                android:textColor="@color/text_blueDark"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -94,7 +94,7 @@
                 android:fontFamily="@font/rus2"
                 android:padding="5dp"
                 android:text="teacher"
-                android:textColor="@color/black"
+                android:textColor="@color/text_blueDark"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -105,7 +105,7 @@
                 android:fontFamily="@font/rus2"
                 android:padding="5dp"
                 android:text="days"
-                android:textColor="@color/black"
+                android:textColor="@color/text_blueDark"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
