--- a/app/src/main/res/layout/content_object.xml
+++ b/app/src/main/res/layout/content_object.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/color_schedulemain"
+        android:background="@color/blueDark_main"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
