--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,8 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="fab_bigger_margin">64dp</dimen>
     <dimen name="image_size">300dp</dimen>
+    <dimen name="title_text_size">26dp</dimen>
+    <dimen name="text_text_size">20dp</dimen>
+
 
 </resources>
