--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp">
 
     <RelativeLayout
         android:id="@+id/ob_rl"
@@ -16,32 +17,46 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/del_ob"
+            android:id="@+id/del_note"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="10dp"
             android:src="@drawable/ic_deletewhite"
-            app:backgroundTint="@android:color/white"
+            app:backgroundTint="@color/text_blueDark"
             app:fabSize="mini" />
 
         <LinearLayout
             android:id="@+id/ob__ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@id/del_ob"
-            android:layout_toRightOf="@id/del_ob"
+            android:layout_toEndOf="@id/del_note"
+            android:layout_toRightOf="@id/del_note"
             android:orientation="vertical">
 
 
-            <MultiAutoCompleteTextView
+            <TextView
                 android:id="@+id/note_note_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/rus2"
-                android:text="MultiAutoCompleteTextView"
-                android:textStyle="bold" />
-
+                android:maxLines="20"
+                android:scrollbars="vertical"
+                android:text="note"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_text_size"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.015" />
 
         </LinearLayout>
     </RelativeLayout>
